--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "trailingComma": "es5",
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 4,
-  "arrowParens": "avoid",
-  "printWidth": 100
+    "trailingComma": "es5",
+    "semi": true,
+    "singleQuote": false,
+    "tabWidth": 4,
+    "arrowParens": "avoid",
+    "printWidth": 80
 }
