--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
         "hardhat-deploy-ethers": "^0.3.0-beta.13",
         "solidity-coverage": "^0.8.2",
         "ts-node": "^10.9.1"
+    },
+    "dependencies": {
+        "node-fetch": "^2.6.13"
     }
 }
